# teacherease_parents_helper

./: .env.example  .gitignore  LICENSE  README.md  claude.md  main.py  pyproject.toml  run_daily.sh
src/: data_parser.py  email_sender.py  scraper.py
